--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "df = pd.read_csv(\"C:/Users/Fifa2/Downloads/watering plants.csv\")\n",
+    "df = pd.read_csv(\"datasets/watering plants.csv\")\n",
     "# Initialize Dash app\n",
     "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "\n"
